--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
 Django==5.2.5
+djangorestframework==3.15.2
+django-cors-headers==4.3.1
+python-jose==3.3.0
+cryptography==43.0.3
 psycopg2-binary==2.9.10
